--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Card page</title>
+    <link rel="stylesheet" href="./assets/styles/style.css">
 </head>
 <body>
-    
+    <section class="card-section">
+        <div class="card">
+            <div class="card-head"></div>
+            <div class="card-info">
+                <img src="./assets/images/userimage.png" alt="" class="card-info__userImage">
+                <h2 class="card-info__userName">John Addison</h2>
+                <p class="card-info__userAdress">New jersey, USA.</p>
+                <div class="card-info__buttons">
+                    <button class="card-info__followBtn">Follow</button>
+                    <button class="card-info__messageBtn">Send message</button>
+                </div>
+                <p class="card-info__subTitle">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="card-footer">
+                <div class="card-footer__links">
+                    <a href="https://uk-ua.facebook.com/" class="card-footer__link"><img src="./assets/icons/facebook.svg" alt=""></a>
+                    <a href="https://www.google.com/" class="card-footer__link"><img src="./assets/icons/google.svg" alt=""></a>
+                    <a href="https://twitter.com/" class="card-footer__link"><img src="./assets/icons/twitter.svg" alt=""></a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
